--- a/www/wp-content/themes/front/core/app.scss
+++ b/www/wp-content/themes/front/core/app.scss
@@ -1,34 +1,49 @@
-@import "./imports.scss";
+// Core
+
+@use "../core/responsive.scss" as *;
+@use "../core/flux.scss" as *;
+@use "../core/columns.scss" as *;
+@use "../core/spacings.scss" as *;
+@use "../core/utils.scss" as *;
+
+// Theme
+
+@use "../theme/breakpoints.scss" as *;
+@use "../theme/variables.scss" as *;
+@use "../theme/mixins.scss" as *;
+@use "../theme/typography.scss" as *;
 
 // Font includes
 
-@import "../theme/fonts.scss";
+@use "../theme/fonts.scss";
 
 // Global
 
-@import "../core/reset.scss";
-@import "../core/global.scss";
+@use "../core/reset.scss";
+@use "../core/global.scss";
 
 // Theme styles
 
-@import "../theme/animations.scss";
-@import "../theme/cursors.scss";
-@import "../theme/format.scss";
+@use "../theme/animations.scss";
+@use "../theme/cursors.scss";
+@use "../theme/format.scss";
+@use "../theme/breakpoints";
+@use "flux";
 
 body[grid]::after {
 	content: "";
 	position: fixed;
 	inset: 0;
-	@include flux(var(--flux_large));
+	@include flux.flux(var(--flux_large));
 	background: linear-gradient(90deg, transparent var(--gutter), red var(--gutter));
 	opacity: 0.1;
 	pointer-events: none;
 
-	@media (min-width: #{$phone + 1px}) {
+	@media (min-width: #{breakpoints.$phone + 1px}) {
 		background-size: calc((100% - var(--gutter)) / 12);
 	}
 
-	@media (max-width: $phone) {
+	@media (max-width: breakpoints.$phone) {
 		background-size: calc((100% - var(--gutter)) / 6);
 	}
 }
