--- a/www/wp-content/themes/front/pages/home/home.twig
+++ b/www/wp-content/themes/front/pages/home/home.twig
@@ -13,6 +13,10 @@
 			gallery: fields.gallery
 		} %} #}
 
+		<h1 v-font="title_1">
+			{{ post.title }}
+		</h1>
+
 		{% include 'blocks/form-fields' with {
 			margin: 'default'
 		} %}
